; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/replication/logical/extr_origin.c_ReplicationOriginShmemSize.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/replication/logical/extr_origin.c_ReplicationOriginShmemSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@max_replication_slots = common dso_local global i64 0, align 8
@ReplicationStateCtl = common dso_local global i32 0, align 4
@states = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ReplicationOriginShmemSize() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  %3 = load i64, i64* @max_replication_slots, align 8
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* %2, align 4
  store i32 %6, i32* %1, align 4
  br label %18

7:                                                ; preds = %0
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* @ReplicationStateCtl, align 4
  %10 = load i32, i32* @states, align 4
  %11 = call i32 @offsetof(i32 %9, i32 %10)
  %12 = call i32 @add_size(i32 %8, i32 %11)
  store i32 %12, i32* %2, align 4
  %13 = load i32, i32* %2, align 4
  %14 = load i64, i64* @max_replication_slots, align 8
  %15 = call i32 @mul_size(i64 %14, i32 4)
  %16 = call i32 @add_size(i32 %13, i32 %15)
  store i32 %16, i32* %2, align 4
  %17 = load i32, i32* %2, align 4
  store i32 %17, i32* %1, align 4
  br label %18

18:                                               ; preds = %7, %5
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i32 @add_size(i32, i32) #1

declare dso_local i32 @offsetof(i32, i32) #1

declare dso_local i32 @mul_size(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
